Creación carrito.xml

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,7 @@
         android:layout_marginTop="612dp"
         android:layout_marginEnd="46dp"
         android:layout_marginBottom="152dp"
+        android:fontFamily="@font/poppins"
         android:text="¡Sushi fresco directo a tu mesa!  Elige desde tu teléfono y disfruta… así de Oishi!"
         android:textAlignment="center"
         android:textSize="20sp"
@@ -42,6 +43,7 @@
         android:layout_marginEnd="119dp"
         android:layout_marginBottom="81dp"
         android:backgroundTint="#FD8663"
+        android:fontFamily="@font/poppins"
         android:shadowColor="#0B0A0A"
         android:shadowDx="0"
         android:shadowDy="0"
