--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,25 +5,17 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@raw/fondo"
-    tools:context=".MainActivity">
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/logo" />
+    android:background="@drawable/fondo"
+    tools:context=".MainActivity"
+    tools:visibility="visible">
 
     <TextView
-        android:id="@+id/textView"
-        android:layout_width="0dp"
+        android:id="@+id/textoInicio"
+        android:layout_width="300dp"
         android:layout_height="87dp"
         android:layout_marginStart="46dp"
-        android:layout_marginTop="612dp"
-        android:layout_marginEnd="46dp"
-        android:layout_marginBottom="152dp"
+        android:layout_marginEnd="47dp"
+        android:layout_marginBottom="188dp"
         android:fontFamily="@font/poppins"
         android:text="¡Sushi fresco directo a tu mesa!  Elige desde tu teléfono y disfruta… así de Oishi!"
         android:textAlignment="center"
@@ -32,29 +24,36 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/logoAPP"
+        app:layout_constraintVertical_bias="0" />
 
-    <Button
-        android:id="@+id/botonInicio"
-        android:layout_width="156dp"
-        android:layout_height="58dp"
-        android:layout_marginStart="118dp"
-        android:layout_marginTop="712dp"
-        android:layout_marginEnd="119dp"
-        android:layout_marginBottom="81dp"
-        android:backgroundTint="#FD8663"
-        android:fontFamily="@font/poppins"
-        android:shadowColor="#0B0A0A"
-        android:shadowDx="0"
-        android:shadowDy="0"
-        android:shadowRadius="0"
-        android:text="Empezar"
-        android:textSize="24sp"
-        app:cornerRadius="10dp"
+    <ImageView
+        android:id="@+id/logoAPP"
+        android:layout_width="394dp"
+        android:layout_height="348dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.425"
+        app:srcCompat="@drawable/logo" />
+
+    <Button
+        android:id="@+id/botonSiguiente"
+        android:layout_width="173dp"
+        android:layout_height="58dp"
+        android:backgroundTint="#FD8663"
+        android:fontFamily="@font/poppins"
+        android:onClick="botonInicio"
+        android:text="Empezar"
+        android:textSize="24sp"
+        android:visibility="visible"
+        app:cornerRadius="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textoInicio"
+        app:layout_constraintVertical_bias="0.2"
         app:strokeColor="#EF6035"
         app:strokeWidth="1dp" />
 
