--- a/app/src/main/res/layout/carrito.xml
+++ b/app/src/main/res/layout/carrito.xml
@@ -84,7 +84,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView4"
+        android:id="@+id/atras"
         android:layout_width="27dp"
         android:layout_height="17dp"
         android:layout_marginStart="16dp"
@@ -98,7 +98,7 @@
         app:srcCompat="@drawable/atras" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/logo"
         android:layout_width="155dp"
         android:layout_height="111dp"
         android:layout_marginTop="1dp"
@@ -108,7 +108,7 @@
         app:srcCompat="@drawable/logo" />
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/carrito"
         android:layout_width="38dp"
         android:layout_height="21dp"
         android:layout_marginStart="339dp"
