--- a/app/src/main/res/layout/carrito_vacio.xml
+++ b/app/src/main/res/layout/carrito_vacio.xml
@@ -2,12 +2,14 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/seleccionMesa"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFF">
+    android:background="#FFFF"
+    tools:context=".CarritoVacio">
 
     <ImageView
-        android:id="@+id/imageView4"
+        android:id="@+id/atras"
         android:layout_width="27dp"
         android:layout_height="17dp"
         android:layout_marginStart="16dp"
@@ -21,7 +23,7 @@
         app:srcCompat="@drawable/atras" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/logo"
         android:layout_width="155dp"
         android:layout_height="111dp"
         android:layout_marginTop="1dp"
@@ -31,7 +33,7 @@
         app:srcCompat="@drawable/logo" />
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/carrito"
         android:layout_width="38dp"
         android:layout_height="21dp"
         android:layout_marginStart="339dp"
