--- a/app/src/main/res/layout/seleccion_mesa.xml
+++ b/app/src/main/res/layout/seleccion_mesa.xml
@@ -2,13 +2,15 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/seleccionMesa"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
-    android:backgroundTint="#FFFFFF">
+    android:backgroundTint="#FFFFFF"
+    tools:context=".SeleccionMesa">
 
     <ImageView
-        android:id="@+id/imageView6"
+        android:id="@+id/mesa2"
         android:layout_width="121dp"
         android:layout_height="83dp"
         android:layout_marginStart="136dp"
@@ -22,7 +24,7 @@
         app:srcCompat="@drawable/mesa2" />
 
     <ImageView
-        android:id="@+id/imageView10"
+        android:id="@+id/mesa5"
         android:layout_width="91dp"
         android:layout_height="105dp"
         android:layout_marginStart="286dp"
@@ -36,7 +38,7 @@
         app:srcCompat="@drawable/mesa5" />
 
     <ImageView
-        android:id="@+id/imageView5"
+        android:id="@+id/mesa1"
         android:layout_width="121dp"
         android:layout_height="83dp"
         android:layout_marginStart="136dp"
@@ -50,7 +52,7 @@
         app:srcCompat="@drawable/mesa1" />
 
     <ImageView
-        android:id="@+id/imageView7"
+        android:id="@+id/mesa3"
         android:layout_width="121dp"
         android:layout_height="83dp"
         android:layout_marginStart="136dp"
@@ -64,7 +66,7 @@
         app:srcCompat="@drawable/mesa3" />
 
     <ImageView
-        android:id="@+id/imageView8"
+        android:id="@+id/mesa4"
         android:layout_width="91dp"
         android:layout_height="105dp"
         android:layout_marginStart="21dp"
@@ -78,7 +80,7 @@
         app:srcCompat="@drawable/mesa4" />
 
     <ImageView
-        android:id="@+id/imageView4"
+        android:id="@+id/atras"
         android:layout_width="27dp"
         android:layout_height="17dp"
         android:layout_marginStart="16dp"
@@ -92,7 +94,7 @@
         app:srcCompat="@drawable/atras" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/logo"
         android:layout_width="155dp"
         android:layout_height="111dp"
         android:layout_marginTop="1dp"
@@ -102,7 +104,7 @@
         app:srcCompat="@drawable/logo" />
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/carrito"
         android:layout_width="38dp"
         android:layout_height="21dp"
         android:layout_marginStart="339dp"
@@ -116,7 +118,7 @@
         app:srcCompat="@drawable/carrito" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textoExplicacion"
         android:layout_width="336dp"
         android:layout_height="79dp"
         android:layout_marginStart="28dp"
@@ -133,7 +135,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/botonInicio"
+        android:id="@+id/botonSiguiente"
         android:layout_width="156dp"
         android:layout_height="58dp"
         android:layout_marginStart="118dp"
@@ -142,6 +144,7 @@
         android:layout_marginBottom="81dp"
         android:backgroundTint="#FD8663"
         android:fontFamily="@font/poppins"
+        android:onClick="botonSiguiente"
         android:shadowColor="#0B0A0A"
         android:text="Siguiente"
         android:textSize="23sp"
