Cambios en SeleccionMesa.java Cambios en carta.xml (ID) Metodo @put en ContenedorPlatosAdaptador.java Cambios en plantilla_plato.xml (ID) Cambio de nombre sushi_nigiri_salmon.png

--- a/app/src/main/res/layout/carta.xml
+++ b/app/src/main/res/layout/carta.xml
@@ -271,6 +271,7 @@
         app:layout_constraintTop_toTopOf="@+id/botonCategoriaRamen" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/contenedorPlatos"
         android:layout_width="328dp"
         android:layout_height="512dp"
         android:layout_marginStart="33dp"
