--- a/app/src/main/res/layout/plantilla_plato.xml
+++ b/app/src/main/res/layout/plantilla_plato.xml
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/imagenPlato"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginEnd="42dp"
@@ -39,7 +39,7 @@
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/imageView2"
+            app:layout_constraintStart_toEndOf="@+id/imagenPlato"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
@@ -54,7 +54,7 @@
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.468"
-            app:layout_constraintStart_toEndOf="@+id/imageView2"
+            app:layout_constraintStart_toEndOf="@+id/imagenPlato"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
@@ -69,7 +69,7 @@
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.729"
-            app:layout_constraintStart_toEndOf="@+id/imageView2"
+            app:layout_constraintStart_toEndOf="@+id/imagenPlato"
             app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
