--- a/app/src/main/res/layout/plantilla_plato.xml
+++ b/app/src/main/res/layout/plantilla_plato.xml
@@ -3,15 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/frameLayout"
         android:layout_width="0dp"
-        android:layout_height="127dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="3dp"
-        android:layout_marginEnd="1dp"
+        android:layout_height="78dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
         android:background="@drawable/boton_categoria"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -19,58 +19,72 @@
 
         <ImageView
             android:id="@+id/imagenPlato"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginEnd="42dp"
+            android:layout_width="83dp"
+            android:layout_height="67dp"
+            android:layout_marginStart="29dp"
+            android:layout_marginTop="6dp"
+            android:layout_marginBottom="5dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/nombrePlato"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0"
             app:srcCompat="@drawable/sushi_nigiri_gamba" />
 
         <TextView
             android:id="@+id/nombrePlato"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="36dp"
-            android:layout_marginEnd="48dp"
+            android:layout_width="212dp"
+            android:layout_height="22dp"
+            android:layout_marginStart="160dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="56dp"
+            android:layout_marginBottom="41dp"
             android:fontFamily="@font/poppins"
             android:text="Nigiri de Gambas"
-            android:textSize="20sp"
+            android:textAlignment="center"
+            android:textSize="15sp"
             android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/imagenPlato"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintHorizontal_bias="0.564"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
 
-        <TextView
-            android:id="@+id/unidadesPlato"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="72dp"
-            android:layout_marginEnd="48dp"
-            android:fontFamily="@font/poppins"
-            android:text="4 Uds."
-            android:textColor="#7A7979"
-            android:textSize="14sp"
+        <LinearLayout
+            android:layout_width="111dp"
+            android:layout_height="14dp"
+            android:layout_marginStart="175dp"
+            android:layout_marginTop="47dp"
+            android:layout_marginEnd="75dp"
+            android:layout_marginBottom="17dp"
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.468"
-            app:layout_constraintStart_toEndOf="@+id/imagenPlato"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/precioPlato"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="72dp"
-            android:layout_marginEnd="48dp"
-            android:fontFamily="@font/poppins"
-            android:text="10€"
-            android:textColor="#7A7979"
-            android:textSize="14sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.729"
-            app:layout_constraintStart_toEndOf="@+id/imagenPlato"
-            app:layout_constraintTop_toTopOf="parent" />
+            <TextView
+                android:id="@+id/unidadesPlato"
+                android:layout_width="18dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="4 Uds."
+                android:textAlignment="center"
+                android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/precioPlato"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="10 €"
+                android:textAlignment="viewStart"
+                android:textSize="12sp"
+                tools:layout_editor_absoluteX="235dp"
+                tools:layout_editor_absoluteY="47dp" />
+        </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
