--- a/app/src/main/res/layout/carrito.xml
+++ b/app/src/main/res/layout/carrito.xml
@@ -141,6 +141,7 @@
         app:layout_constraintVertical_bias="1.0" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/contenedorPlatosCarrito"
         android:layout_width="302dp"
         android:layout_height="334dp"
         android:layout_marginStart="35dp"
