--- a/app/src/main/res/layout/carrito.xml
+++ b/app/src/main/res/layout/carrito.xml
@@ -2,12 +2,14 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/carrito"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFF">
+    android:background="#FFFF"
+    tools:context=".Carrito">
 
     <Button
-        android:id="@+id/botonInicio2"
+        android:id="@+id/botonPedirCarrito"
         android:layout_width="156dp"
         android:layout_height="58dp"
         android:layout_marginStart="118dp"
@@ -16,6 +18,7 @@
         android:layout_marginBottom="81dp"
         android:backgroundTint="#FD8663"
         android:fontFamily="@font/poppins"
+        android:onClick="botonPedirCarrito"
         android:shadowColor="#0B0A0A"
         android:shadowDx="0"
         android:shadowDy="0"
